<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileActivity">

    <item
        android:id="@+id/maChangePassword"
        android:title="@string/changePassword"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/maChangeAvatar"
        android:title="@string/changeAvatar"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/maClimbedPeaks"
        android:title="@string/changeAvatar"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/maLogOut"
        android:title="@string/logOut"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
