<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="koplac.vyskovnice.activities.ChangePassword"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    style="@style/layouts">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/etOldPassword"

        android:drawableLeft="@drawable/ic_pass"
        android:inputType="textPassword"
        android:hint="@string/currentPassword"
        style="@style/editTexts"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/etNewPassword"

        android:drawableLeft="@drawable/ic_pass"
        android:inputType="textPassword"
        android:hint="@string/newPassword"
        style="@style/editTexts"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/etNewPassword2"

        android:drawableLeft="@drawable/ic_pass"
        android:inputType="textPassword"
        android:hint="@string/repeatNewPassword"
        style="@style/editTexts"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/btnChangeNewPassword"

        android:text="@string/changePassword"
        style="@style/buttons"/>

</LinearLayout>