<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="koplac.vyskovnice.activities.Profile"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    style="@style/layouts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/etLoginEmail"

            android:drawableLeft="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            style="@style/editTexts"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/etLoginPassword"

            android:drawableLeft="@drawable/ic_pass"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/editTexts"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/btnLoginLogin"
            android:onClick="login"
            android:layout_gravity="right"

            android:text="@string/logIn"
            style="@style/buttons" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            style="@style/separators"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/notAMemberYet"
                style="@style/textViews"
                android:textSize="16sp"
                android:textColor="#FFFFFFFF"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/btnLoginSignin"
                android:onClick="signin"

                android:text="@string/signIn"
                style="@style/buttonBlue"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
