<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="5dp"
    android:gravity="center_vertical"

    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/tvCommentAuthor"
            android:layout_weight="1"

            android:text="@string/nickname"
            style="@style/tvParameterName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/tvCommentDate"
            android:layout_weight="2"

            android:text="@string/date"
            android:textSize="14sp"
            style="@style/tvParameterName"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/tvCommentContent"

        android:text="@string/commentContent"
        style="@style/tvParameterValue"/>

</LinearLayout>